--- a/notebooks/01-GettingStarted/GettingStarted.ipynb
+++ b/notebooks/01-GettingStarted/GettingStarted.ipynb
@@ -25,7 +25,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "def create_anti_test_set(user_id, trainset):\n",
+        "def create_anti_testset(user_id, trainset):\n",
         "    fill = trainset.global_mean\n",
         "    anti_testset = []\n",
         "    inner_uid = trainset.to_inner_uid(str(user_id))\n",
@@ -74,11 +74,11 @@
       ],
       "source": [
         "# Pick an arbitrary test subject\n",
-        "test_subject = 85\n",
+        "test_uid = 85\n",
         "\n",
-        "lens, data, _ = MovieLens.load()\n",
+        "lens, ratings_data, rankings = MovieLens.load()\n",
         "\n",
-        "user_ratings = lens.get_user_ratings(test_subject)\n",
+        "user_ratings = lens.get_user_ratings(test_uid)\n",
         "loved = []\n",
         "hated = []\n",
         "for ratings in user_ratings:\n",
@@ -90,7 +90,7 @@
         "loved.sort(key=lambda x: x[1], reverse=True)\n",
         "hated.sort(key=lambda x: x[1])\n",
         "\n",
-        "print(f\"User {test_subject} loved these movies:\")\n",
+        "print(f\"User {test_uid} loved these movies:\")\n",
         "for ratings in loved[:10]:\n",
         "    print(lens.get_movie_name(ratings[0]), ratings[1])\n",
         "print(\"\\n...and hated these movies:\")\n",
@@ -116,10 +116,10 @@
       ],
       "source": [
         "# Building recommendation model\n",
-        "train_set = data.build_full_trainset()\n",
+        "trainset = ratings_data.build_full_trainset()\n",
         "\n",
         "algo = SVD(verbose=False)\n",
-        "algo.fit(train_set)"
+        "algo.fit(trainset)"
       ]
     },
     {
@@ -148,12 +148,12 @@
       ],
       "source": [
         "# Generate recommendations\n",
-        "test_set = create_anti_test_set(test_subject, train_set)\n",
-        "predictions = algo.test(test_set)\n",
+        "testset = create_anti_testset(test_uid, trainset)\n",
+        "predictions = algo.test(testset)\n",
         "\n",
         "recommendations = []\n",
         "\n",
-        "data = lens.load_movielens_data()\n",
+        "ratings_data = lens.load_movielens_data()\n",
         "\n",
         "print (\"We recommend:\\n\")\n",
         "for user_id, movie_id, true_rating, predicted_rating, _ in predictions:\n",
