--- a/notebooks/03-Evaluating/TestMetrics.ipynb
+++ b/notebooks/03-Evaluating/TestMetrics.ipynb
@@ -162,13 +162,13 @@
       ],
       "source": [
         "# Initialize MovieLens data loader & load data\n",
-        "lens, data, rankings  = MovieLens.load()\n",
+        "lens, ratings_data, rankings  = MovieLens.load()\n",
         "\n",
         "# Generate item similarities so we can measure diversity later\n",
-        "full_train_set = data.build_full_trainset()\n",
+        "full_trainset = ratings_data.build_full_trainset()\n",
         "knn_options = {'name': 'pearson_baseline', 'user_based': False}\n",
         "similarities_model = KNNBaseline(sim_options=knn_options, verbose=False)\n",
-        "similarities_model.fit(full_train_set)"
+        "similarities_model.fit(full_trainset)"
       ]
     },
     {
@@ -184,12 +184,12 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "train_set, test_set = train_test_split(data, test_size=.25, random_state=1)\n",
+        "trainset, testset = train_test_split(ratings_data, test_size=.25, random_state=1)\n",
         "\n",
         "algo = SVD(random_state=10, verbose=False)\n",
-        "algo.fit(train_set)\n",
+        "algo.fit(trainset)\n",
         "\n",
-        "predictions = algo.test(test_set)"
+        "predictions = algo.test(testset)"
       ]
     },
     {
@@ -249,16 +249,16 @@
         "# Set aside one rating per user for testing\n",
         "loo_iterator = LeaveOneOut(n_splits=1, random_state=1)\n",
         "\n",
-        "for train_set, test_set in loo_iterator.split(data):\n",
+        "for trainset, testset in loo_iterator.split(ratings_data):\n",
         "    # Train model without left-out ratings\n",
-        "    algo.fit(train_set)\n",
+        "    algo.fit(trainset)\n",
         "\n",
         "    # Predicts ratings for left-out ratings only\n",
-        "    loo_predictions = algo.test(test_set)\n",
+        "    loo_predictions = algo.test(testset)\n",
         "\n",
         "    # Create predictions for all ratings not in the training set\n",
-        "    anti_test_set = train_set.build_anti_testset()\n",
-        "    all_predictions = algo.test(anti_test_set)\n",
+        "    anti_testset = trainset.build_anti_testset()\n",
+        "    all_predictions = algo.test(anti_testset)\n",
         "\n",
         "    # Calculate top n recommendations for each user\n",
         "    n=10\n",
@@ -304,15 +304,15 @@
         }
       ],
       "source": [
-        "algo.fit(full_train_set)\n",
-        "anti_test_set = full_train_set.build_anti_testset()\n",
-        "all_predictions = algo.test(anti_test_set)\n",
+        "algo.fit(full_trainset)\n",
+        "anti_testset = full_trainset.build_anti_testset()\n",
+        "all_predictions = algo.test(anti_testset)\n",
         "top_n_predictions = RecommenderMetrics.get_top_n(all_predictions, n=10)\n",
         "\n",
         "minimum_rating = 4.0\n",
         "\n",
         "user_coverage = RecommenderMetrics.user_coverage(\n",
-        "    top_n_predictions, full_train_set.n_users, minimum_rating=minimum_rating\n",
+        "    top_n_predictions, full_trainset.n_users, minimum_rating=minimum_rating\n",
         ")\n",
         "diversity = RecommenderMetrics.diversity(top_n_predictions, similarities_model)\n",
         "novelty = RecommenderMetrics.novelty(top_n_predictions, rankings)\n",
