--- a/notebooks/04-Framework/RecsBakeOff.ipynb
+++ b/notebooks/04-Framework/RecsBakeOff.ipynb
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(_, ratings_data, rankings) = MovieLens.load()\n",
+    "lens, ratings_data, rankings = MovieLens.load()\n",
     "\n",
     "evaluator = Evaluator(ratings_data, rankings)"
    ]
