--- a/notebooks/05-ContentBased/ContentRecs.ipynb
+++ b/notebooks/05-ContentBased/ContentRecs.ipynb
@@ -64,7 +64,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "(lens, ratings_data, rankings) = MovieLens.load()\n",
+        "lens, ratings_data, rankings = MovieLens.load()\n",
         "\n",
         "evaluator = Evaluator(ratings_data, rankings)"
       ]
