--- a/notebooks/06-CollaborativeFiltering/SimpleItemCF.ipynb
+++ b/notebooks/06-CollaborativeFiltering/SimpleItemCF.ipynb
@@ -45,14 +45,14 @@
       "outputs": [],
       "source": [
         "# Set parameters\n",
-        "test_subject = '85'\n",
+        "test_uid = '85'\n",
         "k = 10\n",
         "\n",
         "# Load the MovieLens dataset\n",
-        "lens, data, ratings = MovieLens.load()\n",
+        "lens, ratings_data, ratings = MovieLens.load()\n",
         "\n",
         "# Build the training set\n",
-        "train_set = data.build_full_trainset()"
+        "trainset = ratings_data.build_full_trainset()"
       ]
     },
     {
@@ -77,7 +77,7 @@
         "}\n",
         "\n",
         "model = KNNBasic(sim_options=sim_options)\n",
-        "model.fit(train_set)\n",
+        "model.fit(trainset)\n",
         "similarity_matrix = model.compute_similarities()"
       ]
     },
@@ -100,11 +100,11 @@
       "outputs": [],
       "source": [
         "# Get the test user's inner ID\n",
-        "testUserInnerID = train_set.to_inner_uid(test_subject)\n",
+        "test_inner_uid = trainset.to_inner_uid(test_uid)\n",
         "\n",
         "# Get the top K items rated by the user\n",
-        "testUserRatings = train_set.ur[testUserInnerID]\n",
-        "k_neighbours = heapq.nlargest(k, testUserRatings, key=lambda t: t[1])\n",
+        "test_user_ratings = trainset.ur[test_inner_uid]\n",
+        "k_neighbours = heapq.nlargest(k, test_user_ratings, key=lambda t: t[1])\n",
         "\n",
         "# Find similar items to those rated highly by the user\n",
         "candidates = defaultdict(float)\n",
@@ -115,15 +115,15 @@
         "\n",
         "# Track items the user has already seen\n",
         "watched = {}\n",
-        "for item_id, rating in train_set.ur[testUserInnerID]:\n",
+        "for item_id, rating in trainset.ur[test_inner_uid]:\n",
         "    watched[item_id] = 1\n",
         "\n",
         "# Get and display top recommendations\n",
-        "print(\"Top 10 recommendations for user\", test_subject, \":\\n\")\n",
+        "print(\"Top 10 recommendations for user\", test_uid, \":\\n\")\n",
         "pos = 0\n",
         "for item_id, rating_sum in sorted(candidates.items(), key=itemgetter(1), reverse=True):\n",
         "    if not item_id in watched:\n",
-        "        movie_id = train_set.to_raw_iid(item_id)\n",
+        "        movie_id = trainset.to_raw_iid(item_id)\n",
         "        print(lens.get_movie_name(int(movie_id)), rating_sum)\n",
         "        pos += 1\n",
         "        if (pos > 10):\n",
