--- a/notebooks/06-CollaborativeFiltering/SimpleUserCF.ipynb
+++ b/notebooks/06-CollaborativeFiltering/SimpleUserCF.ipynb
@@ -48,10 +48,10 @@
         "k = 10\n",
         "\n",
         "# Load the MovieLens dataset\n",
-        "lens, data, ratings = MovieLens.load()\n",
+        "lens, ratings_data, ratings = MovieLens.load()\n",
         "\n",
         "# Build the training set\n",
-        "train_set = data.build_full_trainset()"
+        "trainset = ratings_data.build_full_trainset()"
       ]
     },
     {
@@ -76,7 +76,7 @@
         "}\n",
         "\n",
         "model = KNNBasic(sim_options=sim_options)\n",
-        "model.fit(train_set)\n",
+        "model.fit(trainset)\n",
         "similarity_matrix = model.compute_similarities()"
       ]
     },
@@ -99,7 +99,7 @@
       "outputs": [],
       "source": [
         "# Get the test user's inner ID\n",
-        "test_inner_uid = train_set.to_inner_uid(str(test_uid))\n",
+        "test_inner_uid = trainset.to_inner_uid(str(test_uid))\n",
         "\n",
         "# Find similar users\n",
         "user_similarities = similarity_matrix[test_inner_uid]\n",
@@ -116,20 +116,20 @@
         "for similar_user in k_neighbours:\n",
         "    inner_uid = similar_user[0]\n",
         "    user_similarity_score = similar_user[1]\n",
-        "    users_own_ratings = train_set.ur[inner_uid]\n",
+        "    users_own_ratings = trainset.ur[inner_uid]\n",
         "    for rating in users_own_ratings:\n",
         "        candidates[rating[0]] += (rating[1] / 5.0) * user_similarity_score\n",
         "\n",
         "# Track items the user has already seen\n",
         "watched = {}\n",
-        "for item_id, rating in train_set.ur[test_inner_uid]:\n",
+        "for item_id, rating in trainset.ur[test_inner_uid]:\n",
         "    watched[item_id] = 1\n",
         "\n",
         "print(\"Top 10 recommendations for user\", test_uid, \":\\n\")\n",
         "pos = 0\n",
         "for item_id, rating_sum in sorted(candidates.items(), key=itemgetter(1), reverse=True):\n",
         "    if not item_id in watched:\n",
-        "        movie_id = train_set.to_raw_iid(item_id)\n",
+        "        movie_id = trainset.to_raw_iid(item_id)\n",
         "        print(lens.get_movie_name(int(movie_id)), rating_sum)\n",
         "        pos += 1\n",
         "        if (pos > 10):\n",
