--- a/notebooks/11-Challenges/EvaluateUserCF-Exploration.ipynb
+++ b/notebooks/11-Challenges/EvaluateUserCF-Exploration.ipynb
@@ -46,7 +46,7 @@
       "outputs": [],
       "source": [
         "\n",
-        "lens, data, rankings = MovieLens.load()"
+        "lens, ratings_data, rankings = MovieLens.load()"
       ]
     },
     {
@@ -64,11 +64,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "evalData = EvaluationDataset(data, rankings)\n",
+        "evaluation_dataset = EvaluationDataset(ratings_data, rankings)\n",
         "\n",
         "# Train on leave-One-Out train set\n",
-        "loo_train_set = evalData.loo_train_set\n",
-        "loo_test_set = evalData.loo_test_set"
+        "loo_trainset = evaluation_dataset.loo_trainset\n",
+        "loo_testset = evaluation_dataset.loo_testset"
       ]
     },
     {
@@ -92,7 +92,7 @@
         "}\n",
         "\n",
         "model = KNNBasic(sim_options=sim_options)\n",
-        "model.fit(loo_train_set)\n",
+        "model.fit(loo_trainset)\n",
         "similarity_matrix = model.compute_similarities()"
       ]
     },
@@ -140,7 +140,7 @@
         "top_n = defaultdict(list)\n",
         "k = 10  # Number of similar users to consider\n",
         "\n",
-        "for uiid in range(loo_train_set.n_users):\n",
+        "for uiid in range(loo_trainset.n_users):\n",
         "    # Get top N similar users to this one\n",
         "    user_similarities = similarity_matrix[uiid]\n",
         "    \n",
@@ -156,13 +156,13 @@
         "    for similar_user in k_neighbours:\n",
         "        inner_id = similar_user[0]\n",
         "        user_similarity_score = similar_user[1]\n",
-        "        users_own_ratings = loo_train_set.ur[inner_id]\n",
+        "        users_own_ratings = loo_trainset.ur[inner_id]\n",
         "        for rating in users_own_ratings:\n",
         "            candidates[rating[0]] += (rating[1] / 5.0) * user_similarity_score\n",
         "    \n",
         "    # Build a dictionary of stuff the user has already seen\n",
         "    watched = {}\n",
-        "    for item_id, rating in loo_train_set.ur[uiid]:\n",
+        "    for item_id, rating in loo_trainset.ur[uiid]:\n",
         "        watched[item_id] = 1\n",
         "    \n",
         "    # Get top-rated items from similar users:\n",
@@ -173,8 +173,8 @@
         "            if (pos == exploration_slot):\n",
         "                movie_id = random.choice(new_movies)\n",
         "            else:\n",
-        "                movie_id = loo_train_set.to_raw_iid(item_id)\n",
-        "            top_n[int(loo_train_set.to_raw_uid(uiid))].append((int(movie_id), 0.0))\n",
+        "                movie_id = loo_trainset.to_raw_iid(item_id)\n",
+        "            top_n[int(loo_trainset.to_raw_uid(uiid))].append((int(movie_id), 0.0))\n",
         "            pos += 1\n",
         "            if (pos > 40):\n",
         "                break"
@@ -196,7 +196,7 @@
       "outputs": [],
       "source": [
         "# Measure hit rate\n",
-        "print(\"HR\", RecommenderMetrics.hit_rate(top_n, loo_test_set))"
+        "print(\"HR\", RecommenderMetrics.hit_rate(top_n, loo_testset))"
       ]
     }
   ],
