--- a/notebooks/11-Challenges/EvaluateUserCF-Outliers.ipynb
+++ b/notebooks/11-Challenges/EvaluateUserCF-Outliers.ipynb
@@ -32,7 +32,7 @@
         "from recsys.RecommenderMetrics import RecommenderMetrics\n",
         "from recsys.EvaluationDataset import EvaluationDataset\n",
         "\n",
-        "ml, data, rankings = MovieLens.load()"
+        "lens, ratings_data, rankings = MovieLens.load()"
       ]
     },
     {
@@ -50,11 +50,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "evalData = EvaluationDataset(data, rankings)\n",
+        "evaluation_dataset = EvaluationDataset(ratings_data, rankings)\n",
         "\n",
         "# Train on leave-One-Out train set\n",
-        "train_set = evalData.loo_train_set\n",
-        "loo_test_set = evalData.loo_test_set"
+        "loo_trainset = evaluation_dataset.loo_trainset\n",
+        "loo_testset = evaluation_dataset.loo_testset"
       ]
     },
     {
@@ -78,7 +78,7 @@
         "}\n",
         "\n",
         "model = KNNBasic(sim_options=sim_options)\n",
-        "model.fit(train_set)\n",
+        "model.fit(loo_trainset)\n",
         "similarity_matrix = model.compute_similarities()"
       ]
     },
@@ -107,7 +107,7 @@
         "top_n = defaultdict(list)\n",
         "k = 10  # Number of similar users to consider\n",
         "\n",
-        "for uiid in range(train_set.n_users):\n",
+        "for uiid in range(loo_trainset.n_users):\n",
         "    # Get top N similar users to this one\n",
         "    similarityRow = similarity_matrix[uiid]\n",
         "    \n",
@@ -123,21 +123,21 @@
         "    for similar_user in k_neighbours:\n",
         "        inner_id = similar_user[0]\n",
         "        user_similarity_score = similar_user[1]\n",
-        "        users_own_ratings = train_set.ur[inner_id]\n",
+        "        users_own_ratings = loo_trainset.ur[inner_id]\n",
         "        for rating in users_own_ratings:\n",
         "            candidates[rating[0]] += (rating[1] / 5.0) * user_similarity_score\n",
         "    \n",
         "    # Build a dictionary of stuff the user has already seen\n",
         "    watched = {}\n",
-        "    for item_id, rating in train_set.ur[uiid]:\n",
+        "    for item_id, rating in loo_trainset.ur[uiid]:\n",
         "        watched[item_id] = 1\n",
         "    \n",
         "    # Get top-rated items from similar users:\n",
         "    pos = 0\n",
         "    for item_id, rating_sum in sorted(candidates.items(), key=itemgetter(1), reverse=True):\n",
         "        if not item_id in watched:\n",
-        "            movie_id = train_set.to_raw_iid(item_id)\n",
-        "            top_n[int(train_set.to_raw_uid(uiid))].append((int(movie_id), 0.0))\n",
+        "            movie_id = loo_trainset.to_raw_iid(item_id)\n",
+        "            top_n[int(loo_trainset.to_raw_uid(uiid))].append((int(movie_id), 0.0))\n",
         "            pos += 1\n",
         "            if (pos > 40):\n",
         "                break"
@@ -159,7 +159,7 @@
       "outputs": [],
       "source": [
         "# Measure hit rate\n",
-        "print(\"HR\", RecommenderMetrics.hit_rate(top_n, loo_test_set))"
+        "print(\"HR\", RecommenderMetrics.hit_rate(top_n, loo_testset))"
       ]
     }
   ],
