--- a/notebooks/06-CollaborativeFiltering/EvaluateUserCF.ipynb
+++ b/notebooks/06-CollaborativeFiltering/EvaluateUserCF.ipynb
@@ -52,10 +52,10 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "lens, data, rankings = MovieLens.load()\n",
+        "lens, ratings_data, rankings = MovieLens.load()\n",
         "\n",
         "# Initialize evaluation data with leave-one-out cross-validation\n",
-        "evalData = EvaluationDataset(data, rankings)"
+        "evaluation_dataset = EvaluationDataset(ratings_data, rankings)"
       ]
     },
     {
@@ -74,7 +74,7 @@
       "outputs": [],
       "source": [
         "# Get the leave-one-out training set\n",
-        "train_set = evalData.loo_train_set\n",
+        "loo_trainset = evaluation_dataset.loo_trainset\n",
         "\n",
         "# Configure and train the model\n",
         "sim_options = {\n",
@@ -83,7 +83,7 @@
         "}\n",
         "\n",
         "model = KNNBasic(sim_options=sim_options, verbose=False)\n",
-        "model.fit(train_set)\n",
+        "model.fit(loo_trainset)\n",
         "similarity_matrix = model.compute_similarities()"
       ]
     },
@@ -106,13 +106,13 @@
       "outputs": [],
       "source": [
         "# Get the leave-one-out test set\n",
-        "loo_test_set = evalData.loo_test_set\n",
+        "loo_testset = evaluation_dataset.loo_testset\n",
         "\n",
         "# Generate recommendations for each user\n",
         "top_n = defaultdict(list)\n",
         "k = 10\n",
         "\n",
-        "for uiid in range(train_set.n_users):\n",
+        "for uiid in range(loo_trainset.n_users):\n",
         "    # Get top N similar users\n",
         "    similarityRow = similarity_matrix[uiid]\n",
         "    \n",
@@ -128,21 +128,21 @@
         "    for similar_user in k_neighbours:\n",
         "        inner_id = similar_user[0]\n",
         "        user_similarity_score = similar_user[1]\n",
-        "        users_own_ratings = train_set.ur[inner_id]\n",
+        "        users_own_ratings = loo_trainset.ur[inner_id]\n",
         "        for rating in users_own_ratings:\n",
         "            candidates[rating[0]] += (rating[1] / 5.0) * user_similarity_score\n",
         "    \n",
         "    # Track items the user has already seen\n",
         "    watched = {}\n",
-        "    for item_id, rating in train_set.ur[uiid]:\n",
+        "    for item_id, rating in loo_trainset.ur[uiid]:\n",
         "        watched[item_id] = 1\n",
         "    \n",
         "    # Get top recommendations\n",
         "    pos = 0\n",
         "    for item_id, rating_sum in sorted(candidates.items(), key=itemgetter(1), reverse=True):\n",
         "        if not item_id in watched:\n",
-        "            movie_id = train_set.to_raw_iid(item_id)\n",
-        "            top_n[int(train_set.to_raw_uid(uiid))].append((int(movie_id), 0.0))\n",
+        "            movie_id = loo_trainset.to_raw_iid(item_id)\n",
+        "            top_n[int(loo_trainset.to_raw_uid(uiid))].append((int(movie_id), 0.0))\n",
         "            pos += 1\n",
         "            if (pos > 40):\n",
         "                break"
@@ -174,7 +174,7 @@
         }
       ],
       "source": [
-        "hit_rate = RecommenderMetrics.hit_rate(top_n, loo_test_set)\n",
+        "hit_rate = RecommenderMetrics.hit_rate(top_n, loo_testset)\n",
         "\n",
         "f\"Hit Rate: {hit_rate}\""
       ]
