--- a/notebooks/03-Evaluating/TestMetrics.ipynb
+++ b/notebooks/03-Evaluating/TestMetrics.ipynb
@@ -152,7 +152,7 @@
         {
           "data": {
             "text/plain": [
-              "<surprise.prediction_algorithms.knns.KNNBaseline at 0x7ff213fe9fa0>"
+              "<surprise.prediction_algorithms.knns.KNNBaseline at 0x77bd3cbf1a90>"
             ]
           },
           "execution_count": 4,
