--- a/notebooks/03-Evaluating/TestMetrics.ipynb
+++ b/notebooks/03-Evaluating/TestMetrics.ipynb
@@ -152,7 +152,7 @@
         {
           "data": {
             "text/plain": [
-              "<surprise.prediction_algorithms.knns.KNNBaseline at 0x77bd3cbf1a90>"
+              "<surprise.prediction_algorithms.knns.KNNBaseline at 0x77934e90bfe0>"
             ]
           },
           "execution_count": 4,
@@ -240,7 +240,7 @@
             "\t4.0: 0.04255\n",
             "\t4.5: 0.02083\n",
             "\t5.0: 0.06803\n",
-            "cHR (Cumulative Hit Rate, rating >= 4): 0.04961\n",
+            "cHR (Cumulative Hit Rate, rating >= 4): 0.02832\n",
             "ARHR (Average Reciprocal Hit Rank): 0.01116\n"
           ]
         }
@@ -265,20 +265,19 @@
         "    top_n_predictions = RecommenderMetrics.get_top_n(all_predictions, n=n)\n",
         "    \n",
         "    # How often we recommended a movie the user actually rated\n",
-        "    hit_rate = RecommenderMetrics.hit_rate(top_n_predictions, loo_predictions)\n",
+        "    # How often we recommended a movie the user actually liked\n",
+        "    # Compute ARHR\n",
+        "    hit_rate, cumulative_hit_rate, average_reciprocal_hit_rank = RecommenderMetrics.hit_rate_metrics(top_n_predictions, loo_predictions, 4.0)\n",
+        "    \n",
         "    # Hit Rate by rating value\n",
         "    rating_hit_rate = RecommenderMetrics.rating_hit_rate(top_n_predictions, loo_predictions)\n",
-        "    # How often we recommended a movie the user actually liked\n",
-        "    cumulative_hit_rate = RecommenderMetrics.cumulative_hit_rate(top_n_predictions, loo_predictions, 4.0)\n",
-        "    # Compute ARHR\n",
-        "    arhr = RecommenderMetrics.average_reciprocal_hit_rank(top_n_predictions, loo_predictions)\n",
         "    \n",
         "    print(f\"Hit Rate: {hit_rate:.5f}\")\n",
         "    print(\"rHR (Hit Rate by rating value):\")\n",
         "    for rating, rate in rating_hit_rate:\n",
         "        print(f\"\\t{rating}: {rate:.5f}\")\n",
         "    print(f\"cHR (Cumulative Hit Rate, rating >= 4): {cumulative_hit_rate:.5f}\")\n",
-        "    print(f\"ARHR (Average Reciprocal Hit Rank): {arhr:.5f}\")"
+        "    print(f\"ARHR (Average Reciprocal Hit Rank): {average_reciprocal_hit_rank:.5f}\")"
       ]
     },
     {
