--- a/notebooks/04-Framework/RecsBakeOff.ipynb
+++ b/notebooks/04-Framework/RecsBakeOff.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -25,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +194,7 @@
        "      <td>0.903370</td>\n",
        "      <td>0.697788</td>\n",
        "      <td>0.031297</td>\n",
-       "      <td>0.031297</td>\n",
+       "      <td>0.028316</td>\n",
        "      <td>0.011369</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.046182</td>\n",
@@ -196,7 +205,7 @@
        "      <td>1.438459</td>\n",
        "      <td>1.147809</td>\n",
        "      <td>0.008942</td>\n",
-       "      <td>0.008942</td>\n",
+       "      <td>0.005961</td>\n",
        "      <td>0.001505</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.071946</td>\n",
@@ -209,8 +218,8 @@
       "text/plain": [
        "               RMSE       MAE        HR       cHR      ARHR  Coverage  \\\n",
        "Algorithm                                                               \n",
-       "SVD        0.903370  0.697788  0.031297  0.031297  0.011369       1.0   \n",
-       "Random     1.438459  1.147809  0.008942  0.008942  0.001505       1.0   \n",
+       "SVD        0.903370  0.697788  0.031297  0.028316  0.011369       1.0   \n",
+       "Random     1.438459  1.147809  0.008942  0.005961  0.001505       1.0   \n",
        "\n",
        "           Diversity     Novelty  \n",
        "Algorithm                         \n",
@@ -218,7 +227,7 @@
        "Random      0.071946  557.836513  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +242,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "RecSys",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -247,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
