--- a/notebooks/06-CollaborativeFiltering/EvaluateUserCF.ipynb
+++ b/notebooks/06-CollaborativeFiltering/EvaluateUserCF.ipynb
@@ -174,9 +174,14 @@
         }
       ],
       "source": [
-        "hit_rate = RecommenderMetrics.hit_rate(top_n, loo_testset)\n",
+        "hit_rate, cumulative_hit_rate, average_reciprocal_hit_rank = RecommenderMetrics.hit_rate_metrics(top_n, loo_testset, 4.0)\n",
+        "    \n",
         "\n",
-        "f\"Hit Rate: {hit_rate}\""
+        "(\n",
+        "    f\"Hit Rate: {hit_rate}\\n\"\n",
+        "    f\"Cumulative Hit Rate: {cumulative_hit_rate}\\n\"\n",
+        "    f\"Average Reciprocal Hit Rank: {average_reciprocal_hit_rank}\"\n",
+        ")"
       ]
     }
   ],
