--- a/notebooks/01-GettingStarted/GettingStarted.ipynb
+++ b/notebooks/01-GettingStarted/GettingStarted.ipynb
@@ -77,8 +77,8 @@
         "# Building recommendation model\n",
         "trainset = ratings_data.build_full_trainset()\n",
         "\n",
-        "algo = SVD(verbose=False)\n",
-        "algo.fit(trainset)"
+        "model = SVD(verbose=False)\n",
+        "model.fit(trainset)"
       ]
     },
     {
@@ -89,7 +89,7 @@
       "source": [
         "# Generate recommendations\n",
         "testset = create_anti_testset(test_uid, trainset)\n",
-        "predictions = algo.test(testset)\n",
+        "predictions = model.test(testset)\n",
         "\n",
         "recommendations = []\n",
         "\n",
