--- a/notebooks/03-Evaluating/TestMetrics.ipynb
+++ b/notebooks/03-Evaluating/TestMetrics.ipynb
@@ -2,9 +2,18 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The autoreload extension is already loaded. To reload it, use:\n",
+            "  %reload_ext autoreload\n"
+          ]
+        }
+      ],
       "source": [
         "%load_ext autoreload\n",
         "%autoreload 2"
@@ -39,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -62,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -125,7 +134,7 @@
               "2       1     1061     3.0  1260759182"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -146,16 +155,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "<surprise.prediction_algorithms.knns.KNNBaseline at 0x77934e90bfe0>"
+              "<surprise.prediction_algorithms.knns.KNNBaseline at 0x71bb11f0fec0>"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -180,16 +189,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
         "trainset, testset = train_test_split(ratings_data, test_size=.25, random_state=1)\n",
         "\n",
-        "algo = SVD(random_state=10, verbose=False)\n",
-        "algo.fit(trainset)\n",
+        "model = SVD(random_state=10, verbose=False)\n",
+        "model.fit(trainset)\n",
         "\n",
-        "predictions = algo.test(testset)"
+        "predictions = model.test(testset)"
       ]
     },
     {
@@ -201,7 +210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -227,7 +236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -251,14 +260,14 @@
         "\n",
         "for trainset, testset in loo_iterator.split(ratings_data):\n",
         "    # Train model without left-out ratings\n",
-        "    algo.fit(trainset)\n",
+        "    model.fit(trainset)\n",
         "\n",
         "    # Predicts ratings for left-out ratings only\n",
-        "    loo_predictions = algo.test(testset)\n",
+        "    loo_predictions = model.test(testset)\n",
         "\n",
         "    # Create predictions for all ratings not in the training set\n",
         "    anti_testset = trainset.build_anti_testset()\n",
-        "    all_predictions = algo.test(anti_testset)\n",
+        "    all_predictions = model.test(anti_testset)\n",
         "\n",
         "    # Calculate top n recommendations for each user\n",
         "    n=10\n",
@@ -266,11 +275,9 @@
         "    \n",
         "    # How often we recommended a movie the user actually rated\n",
         "    # How often we recommended a movie the user actually liked\n",
-        "    # Compute ARHR\n",
-        "    hit_rate, cumulative_hit_rate, average_reciprocal_hit_rank = RecommenderMetrics.hit_rate_metrics(top_n_predictions, loo_predictions, 4.0)\n",
-        "    \n",
+        "    # ARHR\n",
         "    # Hit Rate by rating value\n",
-        "    rating_hit_rate = RecommenderMetrics.rating_hit_rate(top_n_predictions, loo_predictions)\n",
+        "    hit_rate, cumulative_hit_rate, average_reciprocal_hit_rank, rating_hit_rate = RecommenderMetrics.hit_rate_metrics(top_n_predictions, loo_predictions, 4.0)\n",
         "    \n",
         "    print(f\"Hit Rate: {hit_rate:.5f}\")\n",
         "    print(\"rHR (Hit Rate by rating value):\")\n",
@@ -289,7 +296,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -303,9 +310,9 @@
         }
       ],
       "source": [
-        "algo.fit(full_trainset)\n",
+        "model.fit(full_trainset)\n",
         "anti_testset = full_trainset.build_anti_testset()\n",
-        "all_predictions = algo.test(anti_testset)\n",
+        "all_predictions = model.test(anti_testset)\n",
         "top_n_predictions = RecommenderMetrics.get_top_n(all_predictions, n=10)\n",
         "\n",
         "minimum_rating = 4.0\n",
