--- a/notebooks/11-Challenges/EvaluateUserCF-Exploration.ipynb
+++ b/notebooks/11-Challenges/EvaluateUserCF-Exploration.ipynb
@@ -195,12 +195,13 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "hit_rate, cumulative_hit_rate, average_reciprocal_hit_rank = RecommenderMetrics.hit_rate_metrics(top_n, loo_testset, 4.0)\n",
+        "hit_rate, cumulative_hit_rate, average_reciprocal_hit_rank, rating_hit_rate = RecommenderMetrics.hit_rate_metrics(top_n, loo_testset, 4.0)\n",
         " \n",
         "(\n",
         "    f\"Hit Rate: {hit_rate}\\n\"\n",
         "    f\"Cumulative Hit Rate: {cumulative_hit_rate}\\n\"\n",
         "    f\"Average Reciprocal Hit Rank: {average_reciprocal_hit_rank}\"\n",
+        "    f\"Rating Hit Rate: {rating_hit_rate}\"\n",
         ")\n"
       ]
     }
