--- a/notebooks/03-Evaluating/TestMetrics.ipynb
+++ b/notebooks/03-Evaluating/TestMetrics.ipynb
@@ -2,9 +2,18 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 99,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The autoreload extension is already loaded. To reload it, use:\n",
+            "  %reload_ext autoreload\n"
+          ]
+        }
+      ],
       "source": [
         "%load_ext autoreload\n",
         "%autoreload 2"
@@ -39,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 100,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -62,9 +71,74 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 101,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>userId</th>\n",
+              "      <th>movieId</th>\n",
+              "      <th>rating</th>\n",
+              "      <th>timestamp</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>31</td>\n",
+              "      <td>2.5</td>\n",
+              "      <td>1260759144</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1029</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>1260759179</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1061</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>1260759182</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   userId  movieId  rating   timestamp\n",
+              "0       1       31     2.5  1260759144\n",
+              "1       1     1029     3.0  1260759179\n",
+              "2       1     1061     3.0  1260759182"
+            ]
+          },
+          "execution_count": 101,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "data_types = { 'userId': np.int32, 'movieId': np.int32, 'rating': np.float32, 'timestamp': np.int32 }\n",
         "ratings_df = pd.read_csv('../../src/recsys/data/ratings.csv', dtype=data_types)\n",
@@ -81,9 +155,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 102,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "<surprise.prediction_algorithms.knns.KNNBaseline at 0x76f17fd71640>"
+            ]
+          },
+          "execution_count": 102,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Initialize MovieLens data loader & load data\n",
         "lens, ratings_data, rankings  = MovieLens.load()\n",
@@ -104,7 +189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 103,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -125,9 +210,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 104,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "RMSE: 0.9033701087151801\n",
+            "MAE: 0.6977882196132263\n"
+          ]
+        }
+      ],
       "source": [
         "print(f\"RMSE: {RecommenderMetrics.rmse(predictions)}\")\n",
         "print(f\"MAE: {RecommenderMetrics.mae(predictions)}\")"
@@ -142,9 +236,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 105,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hit Rate: 0.02981\n",
+            "rHR (Hit Rate by rating value):\n",
+            "\t3.5: 0.01724\n",
+            "\t4.0: 0.04255\n",
+            "\t4.5: 0.02083\n",
+            "\t5.0: 0.06803\n",
+            "cHR (Cumulative Hit Rate, rating >= 4): 0.02832\n",
+            "ARHR (Average Reciprocal Hit Rank): 0.01116\n"
+          ]
+        }
+      ],
       "source": [
         "# Set aside one rating per user for testing\n",
         "loo_iterator = LeaveOneOut(n_splits=1, random_state=1)\n",
@@ -164,31 +273,14 @@
         "    n=10\n",
         "    top_n_predictions = RecommenderMetrics.get_top_n(all_predictions, n=n)\n",
         "\n",
-        "    # top_n_predictions2 = RecommenderMetrics.get_top_n2(all_predictions, n=n)\n",
-        "\n",
-        "    # print(f\"Top-N predictions: {len(top_n_predictions.keys())}\")\n",
-        "    # print(f\"Top-N predictions2: {len(top_n_predictions2.keys())}\")\n",
-        "\n",
-        "    # assert len(top_n_predictions) == len(top_n_predictions2)\n",
-        "\n",
-        "    # for uid, ratings in top_n_predictions.items():\n",
-        "    #     assert len(ratings) == len(top_n_predictions2[uid]), f\"Expected {len(ratings)} but got {len(top_n_predictions2[uid])}\"\n",
-        "    #     for i, (iid, rating) in enumerate(ratings):\n",
-        "    #         assert iid == top_n_predictions2[uid][i][1], f\"Expected {iid} but got {top_n_predictions2[uid][i][1]}\"\n",
-        "    #         assert rating == top_n_predictions2[uid][i][3], f\"Expected {rating} but got {top_n_predictions2[uid][i][3]}\"\n",
+        "    hr_metrics = RecommenderMetrics.hit_rate_metrics(top_n_predictions, loo_predictions, 4.0)\n",
         "    \n",
-        "    # How often we recommended a movie the user actually rated\n",
-        "    # How often we recommended a movie the user actually liked\n",
-        "    # ARHR\n",
-        "    # Hit Rate by rating value\n",
-        "    hit_rate, cumulative_hit_rate, average_reciprocal_hit_rank, rating_hit_rate = RecommenderMetrics.hit_rate_metrics(top_n_predictions, loo_predictions, 4.0)\n",
-        "    \n",
-        "    print(f\"Hit Rate: {hit_rate:.5f}\")\n",
+        "    print(f\"Hit Rate: {hr_metrics.HR:.5f}\")\n",
         "    print(\"rHR (Hit Rate by rating value):\")\n",
-        "    for rating, rate in rating_hit_rate:\n",
+        "    for rating, rate in hr_metrics.rHR:\n",
         "        print(f\"\\t{rating}: {rate:.5f}\")\n",
-        "    print(f\"cHR (Cumulative Hit Rate, rating >= 4): {cumulative_hit_rate:.5f}\")\n",
-        "    print(f\"ARHR (Average Reciprocal Hit Rank): {average_reciprocal_hit_rank:.5f}\")"
+        "    print(f\"cHR (Cumulative Hit Rate, rating >= 4): {hr_metrics.cHR:.5f}\")\n",
+        "    print(f\"ARHR (Average Reciprocal Hit Rank): {hr_metrics.ARHR:.5f}\")"
       ]
     },
     {
@@ -200,9 +292,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 107,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "User coverage, rating >= 4.0: 0.95529\n",
+            "Diversity: 0.96652\n",
+            "Novelty (average popularity rank): 491.57678\n"
+          ]
+        }
+      ],
       "source": [
         "model.fit(full_trainset)\n",
         "anti_testset = full_trainset.build_anti_testset()\n",
