--- a/notebooks/03-Evaluating/TestMetrics.ipynb
+++ b/notebooks/03-Evaluating/TestMetrics.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 108,
       "metadata": {},
       "outputs": [
         {
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": 109,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -71,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": 110,
       "metadata": {},
       "outputs": [
         {
@@ -134,7 +134,7 @@
               "2       1     1061     3.0  1260759182"
             ]
           },
-          "execution_count": 101,
+          "execution_count": 110,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -155,16 +155,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": 111,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "<surprise.prediction_algorithms.knns.KNNBaseline at 0x76f17fd71640>"
+              "<surprise.prediction_algorithms.knns.KNNBaseline at 0x76f17f86afc0>"
             ]
           },
-          "execution_count": 102,
+          "execution_count": 111,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -189,7 +189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 112,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -210,7 +210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 113,
       "metadata": {},
       "outputs": [
         {
@@ -236,7 +236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": 114,
       "metadata": {},
       "outputs": [
         {
@@ -292,35 +292,73 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": 115,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "model.fit(full_trainset)\n",
+        "anti_testset = full_trainset.build_anti_testset()\n",
+        "all_predictions = model.test(anti_testset)\n",
+        "top_n_predictions = RecommenderMetrics.get_top_n(all_predictions, n=10)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 116,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "User coverage, rating >= 4.0: 0.95529\n",
-            "Diversity: 0.96652\n",
-            "Novelty (average popularity rank): 491.57678\n"
+            "User coverage, rating >= 4.0: 0.95529\n"
           ]
         }
       ],
       "source": [
-        "model.fit(full_trainset)\n",
-        "anti_testset = full_trainset.build_anti_testset()\n",
-        "all_predictions = model.test(anti_testset)\n",
-        "top_n_predictions = RecommenderMetrics.get_top_n(all_predictions, n=10)\n",
-        "\n",
         "minimum_rating = 4.0\n",
         "\n",
         "user_coverage = RecommenderMetrics.user_coverage(\n",
         "    top_n_predictions, full_trainset.n_users, minimum_rating=minimum_rating\n",
         ")\n",
+        "print(f\"User coverage, rating >= {minimum_rating}: {user_coverage:.5f}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 117,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Diversity: 0.96652\n"
+          ]
+        }
+      ],
+      "source": [
         "diversity = RecommenderMetrics.diversity(top_n_predictions, similarities_model)\n",
+        "\n",
+        "print(f\"Diversity: {diversity:.5f}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 118,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Novelty (average popularity rank): 491.57678\n"
+          ]
+        }
+      ],
+      "source": [
         "novelty = RecommenderMetrics.novelty(top_n_predictions, rankings)\n",
         "\n",
-        "print(f\"User coverage, rating >= {minimum_rating}: {user_coverage:.5f}\")\n",
-        "print(f\"Diversity: {diversity:.5f}\")\n",
         "print(f\"Novelty (average popularity rank): {novelty:.5f}\")"
       ]
     }
